--- a/TestWeb/Views/_ViewImports.cshtml
+++ b/TestWeb/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Pernicek
 @using Pernicek.Models.AccountViewModels
 @using Pernicek.Models.HomeViewModels
+@using Pernicek.Models.ManageViewModels
 @using Alza.Core.Identity.Dal.Entities
 @using Microsoft.AspNetCore.Http
 @using Microsoft.AspNetCore.Http.Authentication
